Update marketing role and fixed some spacing issues.

--- a/css/main.css
+++ b/css/main.css
@@ -385,7 +385,7 @@ nav.navbar .nav>li.login>a {
     padding: 15px;
     border-radius: 10px;
     line-height: 20px;
-    height: 450px;
+    height: 470px;
     overflow: hidden;
 }
 
